# physical-phishing

./: .gitignore  Cargo.toml  LICENSE  README.md  gen.ps1  gen.sh  import.csv
src/: account.rs  cli.rs  main.rs
www/: index.html
www/protected/: secrets.html
