[package]
name = "poem_website_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
futures-util = "0.3"
password-hash = "0.5.0"
poem = { version="3", features = ["static-files", "websocket", "session"]}
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1.8.0"
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0.116"
csv = "1.3.0"
