[package]
name = "phisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
poem = { version="3", features = ["static-files", "websocket", "session"]}
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
# clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0.116"
csv = "1.3.0"
anyhow = "1.0.86"
chrono = "0.4.38"
